Support for IDA 9.0 and other bug fixes.
 * Add support for IDA 9.0, while maintaining backward compatibility.
 * Combine 64-bit version and PE32 on 64-bit version into a single DLL.
 * Add option to allow structures to be placed at named locations.
 * Add accelerators/hotkeys to Class Informer dialog.
 * Change representation of "name" field in type descriptor to string.
 * Rename "IDA_ClassInformer_PlugIn64.dlL" to "ClassInformer64.dll"
 * Fix issue: ** customizeChooseWindow(): "IDADockWidget" not found!
 * Fix issue where CSS style sheet was not being applied.
 * Fix issue: ** customizeChooseWindow(): "TChooserView" not found!
 * Fix issue where row height and sort order were not being applied.
 * Auto size all columns to fit and stretch the last column.
 * Automatically select the first row when Class Informer is run.
 * Fix issue: * Already active. Please close the chooser window first to run it again.
 * Activate existing Class Informer window if it's already open.
 * Retain settings from previous runs in the current database/instance.
 * Reduce font size from 14 to 12px and reduce row height from 24 to 22.
 * Add padding to columns.
 * Update credits and documentation.
 * Class Informer version is now 2.9.

--- a/classinformer-code/Plugin/PropertySheet.props
+++ b/classinformer-code/Plugin/PropertySheet.props
@@ -2,10 +2,10 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros">
-    <IDADIR>C:\Program Files\IDA Pro 8.2\</IDADIR>
-    <QTDIR>C:\Qt\5.15.2-x64\</QTDIR>
+    <IDADIR>C:\Program Files\IDA Professional 9.0\</IDADIR>
+    <QTDIR>C:\Qt\Qt-5.15.3\</QTDIR>
     <IDASUPPORT>..\..\ida-support-library-code\</IDASUPPORT>
-    <IDASDK>..\..\idasdk_pro82\</IDASDK>
+    <IDASDK>$(IDADIR)\sdk\</IDASDK>
   </PropertyGroup>
   <PropertyGroup />
   <ItemDefinitionGroup />
